--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/nav-style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -54,25 +54,24 @@
         <section class="hero">
             <div class="content">
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/lk-lrg.jpg">
-                    <source media="(min-width: 960px)" srcset="images/lk-med.jpg">
-                    <source media="(min-width: 640px)" srcset="images/lk-small.jpg">
-                    <img class="profile" src="images/lk-xsmall.jpg" alt="This is a picture of me">
+                    <source media="(min-width: 1024px)" srcset="images/Marc-lrg.jpg" />
+                    <source media="(min-width: 960px)" srcset="images/Marc-med.jpg" />
+                    <source media="(min-width: 640px)" srcset="images/Marc-small.jpg" />
+                    <img src="images/Marc-xsmall.jpg" alt="This is a picture of me.">
                 </picture>
-                <p class="my-name">Lyan Kent</p>
-                <p class="my-location">Branchburg, NJ</p>
+                <p class="my-name">Marc Ali</p>
+                <p class="my-location">BRANCHBURG, NJ</p>
             </div>
         </section>
         <section id="about-me" class="about-me">
             <div class="content">
                 <div class="about-content">
                     <p class="iama">I want to be...</p>
-                    <p class="my-info">a web developer master!</p>
+                    <p class="my-info">a computer programmer!</p>
                     <p class="iama">My favorite way to work is...</p>
-                    <p class="my-info">late at night with large headphones and lots of coffee.</p>
+                    <p class="my-info">with headphones on without much noise to focus.</p>
                     <p class="iama">In my free time, I like to...</p>
-                    <p class="my-info">run through the park, read sci-fi novels, and redesign my personal site using
-                        whatever new tech I want to learn.</p>
+                    <p class="my-info">Go to amusement parks, work out at the gym, sing, and play video games.
                 </div>
             </div>
         </section>
@@ -82,35 +81,34 @@
         </div>
         <!-- start of photo gallery -->
         <section id="pictures" class="gallery">
-            <h1 class="gallery-title">My Abstract Photo Gallery</h1>
-            <figure class="fig1">
+            <figure>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/fickle-1a-lrg.jpg">
-                    <source media="(min-width: 960px)" srcset="images/fickle-1a-med.jpg">
-                    <source media="(min-width: 640px)" srcset="images/fickle-1a-small.jpg">
-                    <img src="images/fickle-1a-xsmall.jpg" alt="an abstract photo">
+                    <source media="(min-width: 1024px)" srcset="images/smoothie-lrg.jpg" />
+                    <source media="(min-width: 960px)" srcset="images/smoothie-med.jpg" />
+                    <source media="(min-width: 640px)" srcset="images/smoothie-small.jpg" />
+                    <img src="images/smoothie-xsmall.jpg" alt="A Strawberry Banana Smoothie.">
                 </picture>
-                <figcaption>Abstract Photo - Fickle Stream 1</figcaption>
+                <figcaption>A Strawberry Banana Smoothie.</figcaption>
             </figure>
             <hr>
-            <figure class="fig2">
+            <figure>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/fickle-5-lrg.jpg">
-                    <source media="(min-width: 960px)" srcset="images/fickle-5-med.jpg">
-                    <source media="(min-width: 640px)" srcset="images/fickle-5-small.jpg">
-                    <img src="images/fickle-5-xsmall.jpg" alt="an abstract photo">
+                    <source media="(min-width: 1024px)" srcset="images/burger-lrg.jpg" />
+                    <source media="(min-width: 960px)" srcset="images/burger-med.jpg" />
+                    <source media="(min-width: 640px)" srcset="images/burger-small.jpg" />
+                    <img src="images/burger-xsmall.jpg" alt="A Cheese Burger.">
                 </picture>
-                <figcaption>Abstract Photo - Fickle Stream 5</figcaption>
+                <figcaption>A Cheese Burger.</figcaption>
             </figure>
             <hr>
-            <figure class="fig3">
+            <figure>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="images/fickle-6-lrg.jpg">
-                    <source media="(min-width: 960px)" srcset="images/fickle-6-med.jpg">
-                    <source media="(min-width: 640px)" srcset="images/fickle-6-small.jpg">
-                    <img src="images/fickle-6-xsmall.jpg" alt="an abstract photo">
+                    <source media="(min-width: 1024px)" srcset="images/fries-lrg.jpg" />
+                    <source media="(min-width: 960px)" srcset="images/fries-med.jpg" />
+                    <source media="(min-width: 640px)" srcset="images/fries-small.jpg" />
+                    <img src="images/Fries-xsmall.jpg" alt="Fries">
                 </picture>
-                <figcaption>Abstract Photo - Fickle Stream 6</figcaption>
+                <figcaption>French Fries.</figcaption>
             </figure>
         </section>
         <!-- end of photo gallery -->
@@ -120,118 +118,32 @@
         <hr class="mobile-first">
         <!-- start of Sherlock Holmes story -->
         <article id="story" class="story">
-            <h1>Sherlock Holmes</h1>
-            <p>I was very angry, for this was the third demand during the month. 'You shall not have a farthing from
-                me,' I cried, on which he bowed and left the room without another word.</p>
+            <h1>Evelina</h1>
+            <p>THIS insatiable Captain, if left to himself, would not, I believe, rest, till he had tormented Madame Duval into a fever. He seems to have no delight but in terrifying or provoking her; and all his thoughts apparently turn upon inventing such methods as may do it most effectually.</p>
 
-            <p>When he was gone I unlocked my bureau, made sure that my treasure was safe, and locked it again. Then I
-                started to go round the house to see that all was secure--a duty which I usually leave to Mary but which
-                I thought it well to perform myself that night. As I came down the stairs I saw Mary herself at the side
-                window of the hall, which she closed and fastened as I approached.</p>
+            <p>She had her breakfast again in bed yesterday morning: but during ours, the Captain, with a very significant look at Sir Clement, gave us to understand, that he thought she had now rested long enough to bear the hardships of a fresh campaign.</p>
 
-            <p>'Tell me, dad,' said she, looking, I thought, a little disturbed, 'did you give Lucy, the maid, leave to
-                go out to-night?'</p>
+            <p>His meaning was obvious: and, therefore, I resolved to endeavour immediately to put a stop to his intended exploits. When breakfast was over, I followed Mrs. Mirvan out of the parlour, and begged her to lose no time in pleading the cause of Madame Duval with the Captain. "My love," answered she, "I have already expostulated with him; but all I can say is fruitless, while his favourite, Sir Clement, contrives to urge him on."</p>
 
-            <p>'Certainly not.'</p>
+            <p>"Then I will go and speak to Sir Clement," said I, "for I know he will desist if I request him."</p>
 
-            <p>'She came in just now by the back door. I have no doubt that she has only been to the side gate to see
-                someone, but I think that it is hardly safe and should be stopped.'</p>
+            <p>"Have I care, my dear!" said she, smiling: "it is sometimes dangerous to make requests to men who are too desirous of receiving them."</p>
 
-            <p>'You must speak to her in the morning, or I will if you prefer it. Are you sure that everything is
-                fastened?'</p>
+            <p>"Well, then, my dear Madam, will you give me leave to speak myself to the Captain?"</p>
 
-            <p>'Quite sure, dad.'</p>
+            <p>"Willingly: nay, I will accompany you to him."</p>
 
-            <p>'Then, good-night.' I kissed her and went up to my bedroom again, where I was soon asleep.</p>
+            <p>I thanked her, and we went to seek him. He was walking in the garden with Sir Clement. Mrs. Mirvan most obligingly made an opening for my purpose, by saying, "Mr. Mirvan, I have brought a petitioner with me."</p>
 
-            <p>I am endeavouring to tell you everything, Mr. Holmes, which may have any bearing upon the case, but I beg
-                that you will question me upon any point which I do not make clear."</p>
+            <p>"Why, what's the matter now?" cried he.</p>
 
-            <p>On the contrary, your statement is singularly lucid."</p>
+            <p>I was fearful of making him angry, and stammered very much, when I told him, I hoped he had no new plan for alarming Madame Duval.</p>
 
-            <p>I come to a part of my story now in which I should wish to be particularly so. I am not a very heavy
-                sleeper, and the anxiety in my mind tended, no doubt, to make me even less so than usual. About two in
-                the morning, then, I was awakened by some sound in the house. It had ceased ere I was wide awake, but it
-                had left an impression behind it as though a window had gently closed somewhere. I lay listening with
-                all my ears. Suddenly, to my horror, there was a distinct sound of footsteps moving softly in the next
-                room. I slipped out of bed, all palpitating with fear, and peeped round the corner of my dressing-room
-                door.</p>
+            <p>"New plan!" cried he; "why, you don't suppose the old one would do again, do you? Not but what it was a very good one, only I doubt she wouldn't bite."</p>
 
-            <p>'Arthur!' I screamed, 'you villain! you thief! How dare you touch that coronet?'</p>
+            <p>"Indeed, Sir," said I, "she had already suffered too much; and I hope you will pardon me, if I take the liberty of telling you, that I think it my my duty to do all in my power to prevent her being again so much terrified."</p>
 
-            <p>The gas was half up, as I had left it, and my unhappy boy, dressed only in his shirt and trousers, was
-                standing beside the light, holding the coronet in his hands. He appeared to be wrenching at it, or
-                bending it with all his strength. At my cry he dropped it from his grasp and turned as pale as death. I
-                snatched it up and examined it. One of the gold corners, with three of the beryls in it, was missing.
-            </p>
-
-            <p>'You blackguard!' I shouted, beside myself with rage. 'You have destroyed it! You have dishonoured me
-                forever! Where are the jewels which you have stolen?'</p>
-
-            <p>'Stolen!' he cried.</p>
-
-            <p>'Yes, thief!' I roared, shaking him by the shoulder.</p>
-
-            <p>'There are none missing. There cannot be any missing,' said he.</p>
-
-            <p>'There are three missing. And you know where they are. Must I call you a liar as well as a thief? Did I
-                not see you trying to tear off another piece?'</p>
-
-            <p>'You have called me names enough,' said he, 'I will not stand it any longer. I shall not say another word
-                about this business, since you have chosen to insult me. I will leave your house in the morning and make
-                my own way in the world.'</p>
-
-            <p>'You shall leave it in the hands of the police!' I cried half-mad with grief and rage. 'I shall have this
-                matter probed to the bottom.'</p>
-
-            <p>'You shall learn nothing from me,' said he with a passion such as I should not have thought was in his
-                nature. 'If you choose to call the police, let the police find what they can.'</p>
-
-            <p>By this time the whole house was astir, for I had raised my voice in my anger. Mary was the first to rush
-                into my room, and, at the sight of the coronet and of Arthur's face, she read the whole story and, with
-                a scream, fell down senseless on the ground. I sent the house-maid for the police and put the
-                investigation into their hands at once. When the inspector and a constable entered the house, Arthur,
-                who had stood sullenly with his arms folded, asked me whether it was my intention to charge him with
-                theft. I answered that it had ceased to be a private matter, but had become a public one, since the
-                ruined coronet was national property. I was determined that the law should have its way in everything.
-            </p>
-
-            <p>'At least,' said he, 'you will not have me arrested at once. It would be to your advantage as well as
-                mine if I might leave the house for five minutes.'</p>
-
-            <p>'That you may get away, or perhaps that you may conceal what you have stolen,' said I. And then,
-                realising the dreadful position in which I was placed, I implored him to remember that not only my
-                honour but that of one who was far greater than I was at stake; and that he threatened to raise a
-                scandal which would convulse the nation. He might avert it all if he would but tell me what he had done
-                with the three missing stones.</p>
-
-            <p>'You may as well face the matter,' said I; 'you have been caught in the act, and no confession could make
-                your guilt more heinous. If you but make such reparation as is in your power, by telling us where the
-                beryls are, all shall be forgiven and forgotten.'</p>
-
-            <p>'Keep your forgiveness for those who ask for it,' he answered, turning away from me with a sneer. I saw
-                that he was too hardened for any words of mine to influence him. There was but one way for it. I called
-                in the inspector and gave him into custody. A search was made at once not only of his person but of his
-                room and of every portion of the house where he could possibly have concealed the gems; but no trace of
-                them could be found, nor would the wretched boy open his mouth for all our persuasions and our threats.
-                This morning he was removed to a cell, and I, after going through all the police formalities, have
-                hurried round to you to implore you to use your skill in unravelling the matter. The police have openly
-                confessed that they can at present make nothing of it. You may go to any expense which you think
-                necessary. I have already offered a reward of 1000 pounds. My God, what shall I do! I have lost my
-                honour, my gems, and my son in one night. Oh, what shall I do!"</p>
-
-            <p>He put a hand on either side of his head and rocked himself to and fro, droning to himself like a child
-                whose grief has got beyond words.</p>
-
-            <p>Sherlock Holmes sat silent for some few minutes, with his brows knitted and his eyes fixed upon the fire.
-            </p>
-
-            <p>Do you receive much company?" he asked.</p>
-
-            <p>None save my partner with his family and an occasional friend of Arthur's. Sir George Burnwell has been
-                several times lately. No one else, I think."</p>
-
-            <p>Do you go out much in society?"</p>
+            <p>A sullen gloominess instantly clouded his face, and, turning short from me, he said, I might do as I pleased, but that I should much sooner repent than repair my officiousness.</p>
         </article>
         <!-- end of Sherlock Holmes story -->
     </main>
@@ -245,14 +157,27 @@
         <h1>Get in Touch</h1>
         <br class="mobile-first"><br class="mobile-first">
         <div>
-            <form>
+            <form method="POST" action="https://formspree.io/G00255487@stu.raritanval.edu">
                 <fieldset>
-                    <legend>&nbsp;&nbsp; F O R M &nbsp;G O E S &nbsp; H E R E&nbsp;&nbsp;</legend>
-                    <br class="mobile-first"><br class="mobile-first">
-                    <p>
-                        &nbsp;L E F T&nbsp;&nbsp;E M P T Y&nbsp;&nbsp;O N&nbsp;&nbsp;P U R P O S E&nbsp;
-                    </p>
-                    <br class="mobile-first"><br class="mobile-first">
+                    <legend>Please Feel Free To Contact Marc</legend>
+                    <label for="email">Email</label>
+                    <br>
+                    <input id="email" type="email" name="email">
+                    <br><br>
+                    <label for="message">Message</label>
+                    <br>
+                    <textarea id="message" name="message"></textarea>
+                    <br><br><br>
+                    <fieldset>
+                        <legend>I would like a reply from Marc</legend>
+                        <input type="radio" id="reply-yes" name="reply" value="yes" checked>
+                        <label for="reply-yes">Yes</label>
+                        <br><br>
+                        <input type="radio" id="reply-no" name="reply" value="no">
+                        <label for="reply-no">No</label>
+                    </fieldset>
+                    <br><br>
+                    <button type="submit">Send Message</button>
                 </fieldset>
             </form>
         </div>
@@ -261,7 +186,7 @@
     <!-- start of footer -->
     <footer>
         <br class="mobile-first"><br class="mobile-first">
-        <p> &copy; 2019 Lyan Kent</p>
+        <p> &copy; Marc Ali</p>
     </footer>
     <div class="back-to-top">
         <a href="#">Back to Top</a>
@@ -275,7 +200,7 @@
         let symbolToggle = document.getElementById('symbol-toggle');
 
 
-        navBarToggle.addEventListener('click', function () {
+        navBarToggle.addEventListener('click', function() {
             mainNav.classList.toggle('active');
             if (symbolToggle.classList.contains('fa-bars')) {
                 symbolToggle.classList.remove('fa-bars');
@@ -285,6 +210,7 @@
                 symbolToggle.classList.add('fa-bars');
             }
         });
+
     </script>
     <!-- end of javascript for nav toggle -->
 </body>
